# MuonSim

./: README.md  genZ.py  muonpy.py
Geant4/: CMakeLists.txt  main.cc
Geant4/include/: ActionInitialization.hh  DetectorConstruction.hh  PrimaryGeneratorAction.hh  RunAction.hh  ScintillatorSD.hh
Geant4/src/: ActionInitialization.cc  DetectorConstruction.cc  PrimaryGeneratorAction.cc  RunAction.cc  ScintillatorSD.cc
python/: genTheta.py
